[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
ldd = { path="../ldd" }

[[bench]]
name = "operations"
harness = false