[package]
name = "benchmarks"
edition = "2021"
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand.workspace = true
ldd = { path="../ldd" }

[[bench]]
name = "operations"
harness = false