[package]
name = "ldd"
edition = "2021"
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true
rustc-hash.workspace = true
ahash.workspace = true
static_assertions.workspace = true